Fix wrong margin on elements inside of blockquotes in item/article content

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -516,6 +516,10 @@
     width: 100%;
     margin: 0;
 
+    > *:first-child {
+      margin-top: 0;
+    }
+
     > *:last-child {
       margin-bottom: 0;
     }
